Added new headers to current pages

--- a/content/pages/how-to-find-resources-for-clients.mdx
+++ b/content/pages/how-to-find-resources-for-clients.mdx
@@ -6,12 +6,7 @@ blocks:
       alt: InReach Logo
     navBGColor: Green
     navLinks:
-      - {}
-    languages:
-      - language: English
-        flag: US
-      - language: Spanish
-        flag: ES
+      - linkName: ''
     _template: header
   - heroBackgroundImage:
       src: /home/GettingHelpforClientcover.jpg
