--- a/content/pages/mobile-app.mdx
+++ b/content/pages/mobile-app.mdx
@@ -6,25 +6,7 @@ blocks:
       alt: InReach Logo
     navBGColor: Green
     navLinks:
-      - linkName: About
-        linkUrls:
-          - sectionUrl: Mission
-            pathURL: /
-          - sectionUrl: Our Team
-            pathURL: /example-gallery
-          - sectionUrl: Our Vetting Process
-            pathURL: /
-      - linkName: News
-        linkUrls:
-          - sectionUrl: In The News
-            pathURL: /
-          - sectionUrl: Awards
-            pathURL: /
-          - sectionUrl: Our Blog
-            pathURL: /
-      - linkName: Get Help
-      - linkName: Take Action
-      - linkName: Contact
+      - linkName: ''
     _template: header
   - heroBackgroundImage:
       src: /home/MobileAppCover.jpg
