--- a/content/pages/Get-Help-For-My-Client.mdx
+++ b/content/pages/Get-Help-For-My-Client.mdx
@@ -26,8 +26,15 @@ blocks:
       - linkName: Take Action
       - linkName: Contact
     _template: header
+  - heroBackgroundImage:
+      src: /images/img13.png
+    heroHeaderText:
+      text: |
+        # <ColoredText color="White" text=" Getting Help For Your Client." />
+      position: Left
+    _template: hero
   - richTextContent: >
-      # <ColoredText text="USE InReach TO FIND VERIFIED RESOURCE REFERRALS FOR
+      ## <ColoredText text="USE InReach TO FIND VERIFIED RESOURCE REFERRALS FOR
       LGBTQ+ PEOPLE" color="Ally Green" />
     _template: richText
   - heading: ''
@@ -62,7 +69,7 @@ blocks:
   - blockTitle: Our Mobile App
     content:
       - accordionTitle: HOW CAN I DOWNLOAD THE MOBILE APP?
-        accordionContent: >-
+        accordionContent: >
           Download the free InReach mobile app on iOS and Android today. InReach
           is the world’s first tech platform matching LGBTQ+ people facing
           persecution or discrimination with safe, verified resources. Click on
@@ -71,7 +78,7 @@ blocks:
   - blockTitle: Using the InReach App
     content:
       - accordionTitle: HOW DO I SUGGEST A NEW RESOURCE TO ADD TO INREACH?
-        accordionContent: >-
+        accordionContent: >
           Submitting a new resource for consideration is easy and helps our team
           to continue to improve and expand the free InReach App! The InReach
           team is currently accepting public resource suggestions for direct
@@ -86,7 +93,7 @@ blocks:
 
           You can suggest a resource to be listed on the free InReach App here.
       - accordionTitle: HOW DO I ADD MY ORGANIZATION TO INREACH?
-        accordionContent: >-
+        accordionContent: >
           Don’t see your organization, firm or agency listed on InReach?
           Submitting your organization for consideration is easy and helps our
           team to continue to improve and expand the free InReach App! The
@@ -105,13 +112,13 @@ blocks:
       - accordionTitle: >-
           HOW DO I CONNECT MY USER ACCOUNT WITH MY ORGANIZATION’S PROFILE PAGE
           ON INREACH ?
-        accordionContent: "Please note: the ability for service providers to “claim” their own organization’s profile page on the redesigned InReach App is coming soon! \n\nWith a free InReach service provider user account, you will soon be able to:\n\n✍\U0001F3FE Update your organization’s information on InReach\n\U0001F4E8 Invite other staff to join your organization on InReach \n\U0001F511 Gain access to future features built specifically for affiliated service providers on InReach! \nSign up for a free service provider account today. "
+        accordionContent: "Please note: the ability for service providers to “claim” their own organization’s profile page on the redesigned InReach App is coming soon!\n\nWith a free InReach service provider user account, you will soon be able to:\n\n✍\U0001F3FE Update your organization’s information on InReach\n\U0001F4E8 Invite other staff to join your organization on InReach\n\U0001F511 Gain access to future features built specifically for affiliated service providers on InReach!\nSign up for a free service provider account today.\n"
       - accordionTitle: ' WHY SHOULD I SIGN UP FOR A FREE SERVICE PROVIDER USER ACCOUNT?'
-        accordionContent: "With a free InReach account you can unlock additional features, such as:\n \n\U0001F49A Save and share personalized resource lists with clients and coworkers\n\U0001F4AC Leave public rating/reviews on organizations\n\U0001F3E0 Suggest organizations in your area\n\U0001F517 Claim your organization’s profile page (Coming soon!)"
+        accordionContent: "With a free InReach account you can unlock additional features, such as:\n\n\U0001F49A Save and share personalized resource lists with clients and coworkers\n\U0001F4AC Leave public rating/reviews on organizations\n\U0001F3E0 Suggest organizations in your area\n\U0001F517 Claim your organization’s profile page (Coming soon!)\n"
       - accordionTitle: WHAT IS THE INREACH APP?
-        accordionContent: >-
+        accordionContent: >
           InReach is the world’s first tech platform matching LGBTQ+ people
-          facing persecution or discrimination with safe, verified resources. 
+          facing persecution or discrimination with safe, verified resources.
 
 
           The free InReach App is available on web (desktop and mobile), and
@@ -126,7 +133,7 @@ blocks:
           housing, meal assistance, education and employment, translation,
           community and spiritual support, and more critical services.
       - accordionTitle: WHO DOES INREACH SERVE?
-        accordionContent: >-
+        accordionContent: >
           InReach aims to serve as a comprehensive digital one-stop-shop for the
           diverse LGBTQ+ community. InReach has verified services for LGBTQ+
           asylum seekers, refugees and other immigrants, LGBTQ+ Black,
@@ -180,7 +187,7 @@ blocks:
 
           “Crisis resources” (e.g., emergency housing, food, legal help, mental
           health hotlines, medical care, drop-in centers for LGBTQ+ youth,
-          abortion care, and more) 
+          abortion care, and more)
 
           “Quality of life resources” (resources that LGBTQ+ people need to not
           just survive but thrive, such as local community and social groups,
@@ -189,40 +196,38 @@ blocks:
           LGBTQ+ youth, career counseling, libraries, HIV and sexual health,
           language classes, and so much more).
       - accordionTitle: HOW DO I RATE AND REVIEW A RESOURCE I FIND LISTED ON INREACH?
-        accordionContent: >-
+        accordionContent: >
           To rate and review a resource, you must first create a free user
           account.  Please see “HOW DO I SIGN UP FOR A USER ACCOUNT?” above for
-          instructions. 
+          instructions.
 
-           
 
           Once you are logged in, you will be able to leave a public rating (one
           to five stars) and written review on any direct service provider you
-          find listed on InReach. 
+          find listed on InReach.
 
-           
 
           Click on any direct service provider you see listed in the App to go
-          to the organization’s profile page 
+          to the organization’s profile page
 
           Click on the “Reviews” tab on the provider’s profile page to be taken
-          to the the “Leave a review” section 
+          to the the “Leave a review” section
 
-          Click on the stars (one to five stars) to leave a rating 
+          Click on the stars (one to five stars) to leave a rating
 
           Type your review in the text box to leave more feedback on your
           experience
       - accordionTitle: >-
           HOW DO I SHARE FEEDBACK ON MY EXPERIENCE USING INREACH TO FIND SAFE,
           VERIFIED RESOURCES?
-        accordionContent: >-
+        accordionContent: >
           To share feedback with our team, please fill out our quick InReach App
-          Share Feedback Survey. 
+          Share Feedback Survey.
 
 
           We’d love to hear from you!
       - accordionTitle: HOW DO I SIGN UP FOR A SERVICE PROVIDER USER ACCOUNT?
-        accordionContent: >-
+        accordionContent: >
           Visit the InReach App (on a computer, web browser on your phone, or
           download our mobile app on the App Store or Google Play)
 
@@ -233,7 +238,7 @@ blocks:
           Click on “Sign up for free” at the top right-hand corner of your
           screen
 
-          Click on “Professional/Provider” 
+          Click on “Professional/Provider”
 
           Follow the instructions on the screen to create your free InReach
           service provider user account
@@ -245,22 +250,22 @@ blocks:
 
           Click on the “Sign Up” tab
 
-          Click on  “Professional/Provider” 
+          Click on  “Professional/Provider”
 
           Follow the instructions on the screen to create your free InReach
           service provider user account
       - accordionTitle: >-
           HOW DO YOU MAKE SURE THE DIRECT SERVICE PROVIDERS LISTED ON INREACH
           ARE SAFE FOR MEMBERS OF THE DIVERSE LGBTQ+ COMMUNITY?
-        accordionContent: >-
+        accordionContent: >
           Every direct service provider listed on InReach is vetted by our
           trained volunteers to be welcoming to LGBTQ+ people facing persecution
-          or discrimination. 
+          or discrimination.
 
 
           Our trained volunteers employ a rigorous tailored vetting process for
           all direct service providers listed on InReach. Our core vetting
-          criteria include: 
+          criteria include:
 
 
           Is the direct service provider active and legitimate? (required to be
@@ -281,7 +286,7 @@ blocks:
           expertise serving specific historically marginalized LGBTQ+
           communities.
 
-          See our intersectionality definitions for more information. 
+          See our intersectionality definitions for more information.
 
           We repeat our vetting process for every provider listed on InReach at
           least once every 6 months.
@@ -291,3 +296,4 @@ blocks:
     _template: accordionblock
   - _template: footer
 ---
+
