--- a/content/pages/about-us.mdx
+++ b/content/pages/about-us.mdx
@@ -3,15 +3,10 @@ title: about-us
 blocks:
   - logo:
       src: /inreach-logos/InReach_Logo_Color_RGB.svg
-      alt: inreach
+      alt: InReach Logo
     navBGColor: Green
     navLinks:
-      - linkName: About Us
-      - linkName: News
-      - linkName: Get Help
-      - linkName: Take Action
-      - linkName: Contact
-      - linkName: Donate
+      - linkName: ''
     _template: header
   - heroBackgroundImage:
       src: /home/Juniorboard.jpg
@@ -141,4 +136,3 @@ blocks:
     _template: actions
   - _template: footer
 ---
-
