deleted extra GHFMC page, fixed formatting issues in other pages

--- a/content/pages/in-the-news.mdx
+++ b/content/pages/in-the-news.mdx
@@ -12,7 +12,10 @@ blocks:
       src: /images/in-the-news-cover.png
       alt: cover
     heroHeaderText:
-      text: ''
+      text: >
+        # <ColoredText text="InReach (fka AsylumConnect) In The News"
+        color="White" />
+      position: Left
     _template: hero
   - richTextContent: |
       ## <ColoredText text="Press Spotlight" color="Ally Green" />
