--- a/content/pages/mobile-app.mdx
+++ b/content/pages/mobile-app.mdx
@@ -11,10 +11,10 @@ blocks:
   - heroBackgroundImage:
       src: /home/MobileAppCover.jpg
       alt: background
+      colorFilter: '#746363'
     heroHeaderText:
       text: |
         # <ColoredText text="Free InReach Mobile App" color="White" />
-      darkenBackground: false
       position: Left
     _template: hero
   - richTextContent: >
